--- a/app/globals.css
+++ b/app/globals.css
@@ -10,6 +10,11 @@
   box-sizing: border-box;
   font-family: "Manrope", sans-serif;
 }
+.custom-font {
+  font-family: "Manrope", sans-serif;
+
+}
+
 
 /* START: General styles */
 .max-width {
@@ -206,19 +211,19 @@
 }
 /* END: searchbar styles */
 
-/* START: search manufacturer styles */
-.search-manufacturer {
+/* START: search vendor styles */
+.search-vendor {
   @apply flex-1 max-sm:w-full flex justify-start items-center;
 }
 
-.search-manufacturer__input {
+.search-vendor__input {
   @apply w-full h-[48px] pl-12 p-4 rounded-l-full max-sm:rounded-full bg-light-white outline-none cursor-pointer text-sm;
 }
 
-.search-manufacturer__options {
+.search-vendor__options {
   @apply absolute mt-1 max-h-60 w-full overflow-auto rounded-md bg-white py-1 text-base shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none sm:text-sm;
 }
 
-.search-manufacturer__option {
+.search-vendor__option {
   @apply cursor-default select-none py-2 pl-10 pr-4;
 }
