Updated navbar,landing page UIand footer

--- a/app/globals.css
+++ b/app/globals.css
@@ -9,12 +9,11 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "Manrope", sans-serif;
+  background: "#FBF0E4";
 }
 .custom-font {
   font-family: "Manrope", sans-serif;
-
 }
-
 
 /* START: General styles */
 .max-width {
@@ -44,7 +43,7 @@
 
 /* START: Hero styles */
 .hero {
-  @apply flex xl:flex-row flex-col gap-5 relative z-0 max-w-[1440px] mx-auto;
+  @apply flex xl:flex-row flex-col gap-5 relative z-0 max-w-[1440px] mx-auto ml-4;
 }
 
 .hero__title {
@@ -82,21 +81,29 @@
   @apply flex justify-start flex-wrap items-center gap-2;
 }
 
-.home__cars-wrapper {
-  @apply grid 2xl:grid-cols-4 xl:grid-cols-3 md:grid-cols-2 grid-cols-1 w-full gap-8 pt-14;
+.home__products-wrapper {
+  @apply flex 2xl:grid-cols-4 xl:grid-cols-3 md:grid-cols-2 grid-cols-1 w-full gap-8 pt-14;
 }
 
 .home__error-container {
   @apply mt-16 flex justify-center items-center flex-col gap-2;
 }
-/* END: Home styles */
 
-/* START: Car Card styles */
-/* ... (other styles) */
-
-/* START: Product Card styles */
 .product-card {
-  @apply flex flex-col p-6 justify-center items-start text-black-100 bg-primary-brown-100 hover:bg-white hover:shadow-md rounded-3xl;
+  @apply flex flex-col
+    md:flex-row
+    p-6
+    justify-center
+    items-start
+    text-black-100
+    bg-secondary-grey
+    hover:bg-white
+    hover:shadow-md
+    md:space-x-6 
+    mb-6;
+}
+.product-content {
+  @apply flex flex-col gap-1 relative p-0;
 }
 
 .product-card__content {
@@ -146,7 +153,7 @@
 }
 
 .product-details__close-btn {
-  @apply absolute top-2 right-2 z-10 w-fit p-2 bg-primary-brown-100 rounded-full;
+  @apply absolute top-2 right-2 z-10 w-fit p-2 bg-primary-green-100 rounded-full;
 }
 
 .product-details__main-image {
@@ -155,7 +162,6 @@
 /* END: Product Details styles */
 
 /* ... (other styles) */
-
 
 /* START: Custom Filter styles */
 .custom-filter__btn {
